--- a/css/antony.css
+++ b/css/antony.css
@@ -32,3 +32,16 @@ body{
     border: 10px dashed red;
     margin: 0;
  }
+ .gallery {
+   display: grid;
+   grid-template-columns: 250px 250px 250px;
+   border: 20px dashed black ;
+   width: 90%;
+   margin: auto;
+ }
+
+ .gallery img {
+   width: 80%;
+   border: 2px solid green;
+   align-items: center;
+ }
