--- a/css/antony.css
+++ b/css/antony.css
@@ -38,10 +38,23 @@ body{
    border: 20px dashed black ;
    width: 90%;
    margin: auto;
+   justify-content: center;
  }
 
  .gallery img {
    width: 80%;
-   border: 2px solid green;
-   align-items: center;
+   border: 2px solid red;
+   justify-content: center;
+ }
+ header img {
+   border: none;
+   width: 97%;
+   justify-content: center;
+
+ }
+
+ #spanLong{
+   grid-column: 1/span 3;
+   justify-content: center;
+   width: 95%;
  }
