--- a/css/tyler.css
+++ b/css/tyler.css
@@ -2,14 +2,14 @@ body{
    margin:5px;
    padding:5px;
    line-height:1.15;
- }
-  
- h1,h2, h3{
+}
+
+h1,h2, h3{
    font-weight: bold;
    margin-top:15px;
-  
- }
- ul li{
+}
+
+ul li{
    margin-left: 25px;
    list-style-type: upper-roman;
    display: inline-block;
@@ -18,23 +18,45 @@ body{
    width: 150px;
    padding: 10px 0 10px 0;
    border: solid 2px black;
- }
+}
 
- li {
+li {
    text-align: center;
- }
+}
 
- li:link {
+li a:link {
    text-decoration: none;
- }
+}
 
- li:visited {
-   text-decoration: none;
- }
-
- img {
+img {
    width: 24%;
    padding: 20px;
-   border: 10px dashed red;
+   border: 10px dashed green;
    margin: 0;
- }
+}
+
+header img {
+   width: 97%;
+   border: none;
+   justify-content: center;
+   padding: none; 
+}
+
+.gallery {
+   display: inline-grid;
+   grid-template-columns: 250px 250px;
+   width: 90%;
+   gap: 20px;
+   border: dotted black 3px;
+   justify-content: center;
+}
+
+.gallery img {
+   width: 80%;
+}
+
+#span {
+   grid-column: 1/span 2;
+   justify-content: center;
+   width: 95%;
+}
