--- a/css/raghav.css
+++ b/css/raghav.css
@@ -2,59 +2,61 @@ body{
     margin:5px;
     padding:5px;
     line-height:1.15;
- }
+  }
   
- h1,h2, h3{
+  h1,h2, h3{
     font-weight: bold;
     margin-top:15px;
+  }
   
- }
- ul li{
+  ul li{
     margin-left: 25px;
     list-style-type: upper-roman;
- 
- }
-
- li {
     display: inline-block;
-    margin-left: 25px;
-    list-style-type: upper-roman;
     background-color: cyan;
     border-radius: 20px;
-    width: 100px;
+    width: 150px;
+    padding: 10px 0 10px 0;
+    border: solid 2px black;
+  }
+  
+  li {
     text-align: center;
+  }
+  
+  li a:link {
     text-decoration: none;
- }
-
- img {
+  }
+  
+  img {
     width: 24%;
     padding: 20px;
-    border: 10px dashed red;
+    border: 10px dashed green;
     margin: 0;
- }
- .gallery {
-   display: grid;
-   grid-template-columns: 250px 250px 250px;
-   border: 20px dashed black ;
-   width: 90%;
-   margin: auto;
-   justify-content: center;
- }
-
- .gallery img {
-   width: 80%;
-   border: 2px solid red;
-   justify-content: center;
- }
- header img {
-   border: none;
-   width: 97%;
-   justify-content: center;
-
- }
-
- #spanLong{
-   grid-column: 1/span 3;
-   justify-content: center;
-   width: 95%;
- }
+  }
+  
+  header img {
+    width: 97%;
+    border: none;
+    justify-content: center;
+    padding: none; 
+  }
+  
+  .gallery {
+    display: inline-grid;
+    grid-template-columns: 250px 250px;
+    width: 90%;
+    gap: 20px;
+    border: dotted black 3px;
+    justify-content: center;
+  }
+  
+  .gallery img {
+    width: 80%;
+  }
+  
+  #span {
+    grid-column: 1/span 2;
+    justify-content: center;
+    width: 95%;
+  }
